// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba en <GifExpertApp /> Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    Gif App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="DBZ"
      key="DBZ"
    />
    <GifGrid
      category="Movies"
      key="Movies"
    />
  </ol>
</Fragment>
`;

exports[`Prueba en <GifExpertApp /> Debe mostarse correctamente  1`] = `
<Fragment>
  <h2>
    Gif App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
